Update HangmanGame.java